# inference-gateway

./: .env.dev  .env.qwen3-0.6B  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: check.sh
src/: api.rs  lib.rs  main.rs
src/api/: errors.rs  handlers.rs  inference.rs  mod.rs  transactions.rs
src/app/: handlers.rs  mod.rs
src/inference/: autoregressive.rs  cache.rs  cache_optimized.rs  errors.rs  inputs.rs  llm.rs  mod.rs  model.rs  prompting.rs  tensors.rs  tokenization.rs
src/inference/models/: config.rs  text_generation.rs
src/repository/: errors.rs  mod.rs  models.rs  sql.rs  sqlite.rs
src/router/: inference.rs  mod.rs  transactions.rs
src/server/: handlers.rs  mod.rs
src/services/: health.rs  llm.rs  mod.rs  transactions.rs
tests/integration/: test_api.py
