[package]
name = "inference-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-prometheus = "0.9.0"
env_logger = "0.11.8"
half = "2.6.0"
hf-hub = { version = "0.4.3", features = ["tokio"] }
log = "0.4.28"
minijinja = { version = "2.12.0", features = ["loader"] }
minijinja-contrib = { version = "2.12.0", features = ["pycompat"] }
ort = { version = "=2.0.0-rc.10", features = ["cuda", "fetch-models"] }
rand = "0.9.2"
serde = { version = "1.0.225", features = ["serde_derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokenizers = { version = "0.22.1", features = ["http"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "propagate-header", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
