[package]
name = "inference-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "inference-gateway"
path = "src/bin/server.rs"

[lib]
name = "inference_gateway"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.83"
anyhow = "1.0.100"
axum = "0.8.4"
axum-prometheus = "0.9.0"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
half = "2.6.0"
hf-hub = { version = "0.4.3", features = ["tokio"] }
log = "0.4.28"
minijinja = { version = "2.12.0", features = ["loader"] }
minijinja-contrib = { version = "2.12.0", features = ["pycompat"] }
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.10", features = ["cuda", "fetch-models"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.225", features = ["serde_derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.16"
tokenizers = { version = "0.22.1", features = ["http"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "propagate-header", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
